<resources>
    <string name="app_name">Emergency Alert App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginWithEmail">Log in with email</string>
    <string name="register_here"><b>Sign up.</b></string>
    <string name="contact_number">Phone number</string>
    <string name="signUp">Sign Up</string>
    <string name="fullName">Full name</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="log_in_with">Log in with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="sign_up_email">Sign up with Email</string>
    <string name="create_profile">Create Profile</string>


    <string name="client_ID" translatable="false">894602325408-bv5m1mddcd4sj51nrfc5ifqvdtngtmt2.apps.googleusercontent.com</string>
    <string name="client_Secret" translatable="false">x6wgPjaMqUagLd2lbPT-qLYG</string>
    <string name="api_key" translatable="false">AIzaSyBfLyy0V4iFmayVIP8AnbnP2IZsn-yPPIA</string>

    <string name="facebook_app_id" translatable="false">304407400521322</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb304407400521322</string>


    <string name="log_in">Log In</string>
    <string name="resend_verification">Resend verification</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="send_code">Send code</string>
    <string name="verify">Verify number</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="opt_description">We have sent you an OPT for your phone number verification</string>
    <string name="verify_number">Please enter your phone number starting with country code.</string>
    <string name="opt_code">OPT code</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_with_phone_number">Sign with Phone Number</string>
    <string name="don_t_worry_you_can_change_this_info_later">Don’t worry… "\n"you can change this info later.</string>
    <string name="residential_address">Residential address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="body_weight_kg">Body Weight  (Kg)</string>
    <string name="height">Height  (cm)</string>
    <string name="allergies_reaction">Allergies &amp; reaction</string>
    <string name="medical_history">Medical History</string>
    <string name="personal_info">Personal Info</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="medical_records">Medical Records</string>
    <string name="relation">Relation</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="ambulance_service_number">112</string>
    <string name="tap_on_button_to_make_a_request">Tap on button "\n"to make a request…</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="find_doctors_and_nurses_around_you">Doctors and Nurses"\n"around you.</string>
    <string name="hospitals_around_you">Hospitals around you.</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="manage_patients">Manage Patients</string>
    <string name="add_to_contact_list">Add to contact list</string>
    <string name="username">Username</string>
    <string name="place_of_work">Place of work</string>
    <string name="doctor_or_nurse">Doctor or Nurse</string>
    <string name="speciality">Speciality</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="edit">Edit</string>
    <string name="patient_details">Patient Details</string>
    <string name="on_medication">On Medication:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_illness">No illness</string>
    <string name="no_allergies">No allergies</string>
    <string name="update_medical_records">Update medical records</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="qodehub_llc">QodeHub LLC</string>
    <string name="my_account">My Account</string>
    <string name="medication">Medication</string>
    <string name="right_arrow">Right arrow</string>
    <string name="log_out_icon">Log out icon</string>
    <string name="logout">Logout</string>
    <string name="weight_in_kg">Weight in Kg:</string>
    <string name="_67">67</string>
    <string name="height_in_cm">Height in cm:</string>
    <string name="_250">250</string>
    <string name="blood_group">Blood Group:</string>
    <string name="o">O -</string>
    <string name="contact_name">Contact name</string>
    <string name="service_provider_image">Service provider image</string>
    <string name="emergency_number">Emergency number</string>
    <string name="primary_contact">Primary contact</string>
    <string name="app_logo">App logo</string>
    <string name="sos">SOS</string>
    <string name="your_patients">Your patients…</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="user_image">User image</string>
    <string name="or">or</string>
    <string name="delete_icon">Delete icon</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="password_character">...............</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="select_option">Select option</string>
    <string name="get_me_an_ambulance">Get me an ambulance</string>
    <string name="ambulance">Ambulance</string>
    <string name="message_icon">Message icon</string>
    <string name="send_alert">Send alert</string>
    <string name="phone_number">Phone number</string>

</resources>
