<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rootViewBg"
    tools:context=".screens.patient.fragments.HomeFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_120"
        android:padding="@dimen/dp_18"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="@dimen/dp_350"
            android:layout_height="@dimen/dp_350"
            android:gravity="center"
            >
            <LinearLayout
                android:id="@+id/sosBtn"
                android:layout_width="@dimen/dp_270"
                android:layout_height="@dimen/dp_270"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible"
                android:background="@drawable/sos_white_bg"
                android:elevation="@dimen/dp_6"
                >
                <ImageView
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_150"
                    android:src="@drawable/ic_emergency_alert_app_logo"
                    android:contentDescription="@string/app_logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sos"
                    android:textSize="@dimen/sp_50"
                    android:textColor="@color/primaryButtonColorActive"
                    android:fontFamily="@font/poppins_semi_bold"
                    />
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_on_button_to_make_a_request"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/secondaryTextColor"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            android:gravity="center"
            />
    </LinearLayout>
</FrameLayout>