<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RelativeOverlap"
    tools:context=".screens.patient.activities.UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:gravity="center_vertical"
            android:background="@color/whiteColor"
            android:elevation="@dimen/dp_3"
            >

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:padding="@dimen/dp_8"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:visibility="visible"
                />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:padding="@dimen/dp_8"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_close"
                android:layout_centerVertical="true"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/loginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/back"
                android:layout_marginStart="@dimen/dp_36"
                android:text="@string/profile"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/primaryTextColo"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/editLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_18"
                android:padding="@dimen/dp_8"
                android:text="@string/edit"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/primaryButtonColorActive"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_18"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_ok"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/rootLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:focusedByDefault="true"
                >
                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_12"
                    android:src="@drawable/ic_account"
                    android:contentDescription="@string/user_image" />

                <TextView
                    android:id="@+id/change_profile_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/change_profile_photo"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/forgotPassword"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_gravity="center_horizontal"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:hint="@string/username"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/white_bg"
                        android:enabled="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:hint="@string/fullName"
                    android:enabled="false"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/white_bg"
                        android:enabled="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userEmailRegLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:hint="@string/email"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/white_bg"
                        android:enabled="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dobLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:hint="@string/date_of_birth"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/white_bg"
                        android:enabled="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:hint="@string/contact_number"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNum"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/white_bg"
                        android:enabled="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/residentialAddressLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_32"
                    android:hint="@string/residential_address"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/residentialAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/white_bg"
                        android:enabled="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginTop="@dimen/dp_50"
                    android:layout_marginBottom="@dimen/dp_50"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>











