<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="onboarding.screens.LoginWithEmail">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/close"
            android:layout_marginStart="@dimen/dp_36"
            android:text="@string/log_in"
            android:textSize="@dimen/sp_24"
            android:textColor="@color/primaryTextColo"
            android:fontFamily="@font/poppins_medium"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_56"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_8"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/userEmailRegLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/email"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/userPasswordRegLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_12"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgottenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/poppins_light"
            android:text="@string/forgot_password"
            android:textColor="@color/forgotPassword"
            android:textSize="@dimen/sp_15"
            android:layout_gravity="start"
            />

        <RelativeLayout
            android:id="@+id/btnLogin"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/email_login_btn_bg"
            android:gravity="center"
            android:elevation="@dimen/dp_1.45"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/loginWithEmail"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/whiteColor"
                android:fontFamily="@font/poppins_regular"
                android:layout_centerVertical="true"
                android:gravity="center"
                />
        </RelativeLayout>

<!--        <TextView-->
<!--            android:id="@+id/resendVerification"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/dp_18"-->
<!--            android:fontFamily="@font/poppins_medium"-->
<!--            android:letterSpacing="0.1"-->
<!--            android:text="@string/resend_verification"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/primaryButtonColorActive"-->
<!--            android:textSize="@dimen/sp_16"-->
<!--            android:visibility="invisible"-->
<!--            />-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
