<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="onboarding.screens.SignUpWithPhoneNumber">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        android:layout_centerVertical="true"
        />

    <ImageView
        android:id="@+id/ic_phone_hand"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_phone_in_hand"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/verifyPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ic_phone_hand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/verify_your_phone_number"
        android:textAlignment="center"
        android:textColor="@color/primaryButtonColorActive"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/verifyPhoneDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/verifyPhoneLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/verify_number"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/userPhoneNumRegLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/verifyPhoneDescriptionLabel"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="46dp"
        android:hint="Phone number"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPhoneNumReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="12"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendCodeBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneNumRegLayout"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/email_login_btn_bg"
        android:text="@string/send_code"
        android:textSize="18sp"
        android:textColor="@color/whiteColor"
        android:fontFamily="@font/poppins_regular"
        android:textAllCaps="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>






















